examples/effects/failing/02_sealing_denies_filesystem.flx
// The seal allows Console, but the expression performs FileSystem.

fn main() {
    read_file("examples/effects/data.txt") sealing { Console }
}
